tests/spec/emit/snapshots/option_assignment_with_some.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() {
    let mut opt: Option<int> = None;
    opt = Some(42);
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	_ = lisette.MakeOptionNone[int]()
	lisette.MakeOptionSome(42)
}
