tests/spec/emit/snapshots/option_constructor_as_argument_no_binding.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn unwrap_or(o: Option<int>, fallback: int) -> int {
    match o { Some(v) => v, None => fallback }
  }
  
  fn test() -> int {
    unwrap_or(Some(42), 0)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func unwrapOr(o lisette.Option[int], fallback int) int {
	if o.Tag == lisette.OptionSome {
		return o.SomeVal
	}
	return fallback
}

func test() int {
	return unwrapOr(lisette.MakeOptionSome(42), 0)
}
