tests/spec/emit/snapshots/option_in_array_literal.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn maybe(x: int) -> Option<int> {
    if x > 0 { Some(x) } else { None }
  }
  
  fn test() {
    let arr = [maybe(1), maybe(0), maybe(3), maybe(-1)];
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func maybe(x int) (int, bool) {
	if x > 0 {
		return x, true
	}
	return 0, false
}

func test() {
	option := lisette.OptionFromCommaOk[int](maybe(1))
	option_1 := lisette.OptionFromCommaOk[int](maybe(0))
	option_2 := lisette.OptionFromCommaOk[int](maybe(3))
	option_3 := lisette.OptionFromCommaOk[int](maybe(-1))
	_ = []lisette.Option[int]{option, option_1, option_2, option_3}
}
