tests/spec/emit/snapshots/option_in_go_unknown_call_arg_stays_tagged.snap
---
source: tests/spec/emit/types.rs
description: |
  
  import "go:example.com/dyn"
  
  fn main() {
    let _ = dyn.Store("k", None)
    let _ = dyn.Store("k", Some(1))
  }
---
package main

import (
	"example.com/dyn"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	dyn.Store("k", lisette.MakeOptionNone[any]())
	dyn.Store("k", lisette.MakeOptionSome(1))
}
