tests/spec/emit/snapshots/option_interface_type_param_in_match.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  pub interface Printable {
    fn to_string() -> string
  }
  
  struct Box { label: string }
  impl Box {
    pub fn to_string(self) -> string { self.label }
  }
  
  struct Circle { radius: int }
  impl Circle {
    pub fn to_string(self) -> string { "circle" }
  }
  
  fn find_it(n: int) -> Option<Printable> {
    match n {
      1 => Some(Box { label: "found" }),
      2 => Some(Circle { radius: 10 }),
      _ => None,
    }
  }
---
package main

type Printable interface {
	ToString() string
}

type Box struct {
	label string
}

func (b Box) ToString() string {
	return b.label
}

type Circle struct {
	radius int
}

func (c Circle) ToString() string {
	return "circle"
}

func findIt(n int) Printable {
	switch n {
	case 1:
		return Box{label: "found"}
	case 2:
		return Circle{radius: 10}
	default:
		return nil
	}
}
